[project]
name = "manageTodoList"
version = "0.1.0"
description = ""
authors = [
    {name = "Dist Bit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "loguru>=0.7.2,<0.8.0",
    "pysnooper>=1.2.1",
    "gkeepapi>=0.16.0",
    "pydub>=0.25.1",
    "openai>=1.54.3",
    "send2trash>=1.8.3",
    "audioop-lts>=0.2.1",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
